--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,3 +1,4 @@
 Required = This field is required
 Size.userForm.username = Username must be between 8 and 32 characters
-Diff.userForm.passwordConfirm = Password confirmation does not match
+Diff.userForm.passwordConfirm = Password confirmation does not match
+Username.already.exist = "Username already exist"
