--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.11.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
