--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,13 @@
             <version>2.11.3</version>
         </dependency>
 
+        <!--BARCODE-->
+        <dependency>
+            <groupId>net.sourceforge.barbecue</groupId>
+            <artifactId>barbecue</artifactId>
+            <version>1.5-beta1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
