added auditing for entyti

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,5 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS = false
+spring.main.allow-bean-definition-overriding=true
 
