--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,12 @@
             <version>1.5-beta1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
