--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ server.servlet.context-path=
 #spring.datasource.schema=classpath*:database/initDB.sql
 #spring.datasource.data=classpath*:database/populateDB.sql
 
-spring.datasource.url=jdbc:mysql://localhost:3306/evotor?useUnicode=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/my_database?useUnicode=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=12345678
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
