fix test TestBarcode. Added class TypeOs. Include WebSocket

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,1 +1,2 @@
-tests.tmp.catalog = D:/Download/image.png
+tests.tmp.catalog.windows = D:/Download/image.png
+tests.tmp.catalog.mac = /Users/albert.akimov/Documents/image.png
