fix and refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8081
 server.servlet.context-path=
 
 
-spring.jpa.hibernate.ddl-auto = update
+#spring.jpa.hibernate.ddl-auto = update
 #spring.datasource.initialization-mode=always
 #spring.datasource.schema=classpath*:database/initDB.sql
 #spring.datasource.data=classpath*:database/populateDB.sql
